--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Movie Recommendations</title>
+    <title>Yoga</title>
     <link href="styles.css" type="text/css" rel="stylesheet" />
     <script src="store.js"></script>
   </head>
 
   <body>
-    <h1>Store</h1>
+    <h1>Yoga Store</h1>
 
     <p>Hello, dear visitor! Please shop (and spend money) with us!</p>
     <div id="product-overview">
